--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="container-out">
 				    <div class="search-container">
 				        <form id="search-engine">
-					        <input id="search" type="text" onblur="desfocus()"/>
+					        <input id="search" type="text" autocomplete="off" onblur="desfocus()">
 					        <input id="search_submit" type="submit">
 					        <div id="search-results"></div>
 				        </form>				     
@@ -81,10 +81,10 @@
 		    <!-- Carrosel -->
 		    <div class="carousel-inner">
 
-				<div class="carousel-item active" style="background-image: url(imagens/capa.png);">
+				<div class="carousel-item active" style="background-image: url('imagens/capa.png');">
 				</div>
 
-				<div class="carousel-item" style="background-image: url(imagens/ponyo.jpg);">
+				<div class="carousel-item" style="background-image: url('imagens/ponyo.jpg');">
 					<div class="container">
 						<div class="carousel-caption">
 							<h1>Ponyo: Uma Amizade que Veio do Mar</h1>		  
@@ -93,7 +93,7 @@
 					</div>
 				</div>
 
-				<div class="carousel-item" style="background-image: url(imagens/kiki.jpg);">
+				<div class="carousel-item" style="background-image: url('imagens/kiki.jpg');">
 					<div class="container">
 						<div class="carousel-caption text-end">
 							<h1>O Serviço de Entregas da Kiki</h1>
@@ -136,42 +136,42 @@
 			        </div>
 
 			        <div class="col">	           
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/kokuriko.jpg" alt="Da Colina Kokuriko"></a>  
+		        		<a href="html/da-colina-kokuriko.html"><img class="thumbnail" src="imagens/kokuriko.webp" alt="Da Colina Kokuriko"></a>  
 		        		<label class="texto-img">Da Colina Kokuriko</label>          	
 			        </div>
 
 			        <div class="col">
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/marnie.jpg" alt="As Memórias de Marnie"></a>  
+		        		<a href="html/as-memorias-de-marnie.html"><img class="thumbnail" src="imagens/marnie.jpg" alt="As Memórias de Marnie"></a>  
 		            	<label class="texto-img">As Memórias de Marnie</label>            	
 			        </div>
 
 			        <div class="col">	 
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/totoro.jpg" alt="Meu Amigo Totoro"></a>  
+		        		<a href="html/meu-amigo-totoro.html"><img class="thumbnail" src="imagens/totoro.jpg" alt="Meu Amigo Totoro"></a>  
 		        		<label class="texto-img">Meu Amigo Totoro</label>          	
 			        </div>
 
 			        <div class="col">	  
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/O-Castelo-Animado.webp" alt="O Castelo Animado"></a>  
+		        		<a href="html/o-castelo-animado.html"><img class="thumbnail" src="imagens/O-Castelo-Animado.webp" alt="O Castelo Animado"></a>  
 		        		<label class="texto-img">O Castelo Animado</label>           	
 			        </div>
 
 			        <div class="col">	     
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/O-Mundo-dos-Pequeninos.jpg" alt="O Mundo dos Pequeninos"></a>  
+		        		<a href="html/o-mundo-dos-pequeninos.html"><img class="thumbnail" src="imagens/O-Mundo-dos-Pequeninos.jpg" alt="O Mundo dos Pequeninos"></a>  
 		        		<label class="texto-img">O Mundo dos Pequeninos</label>
 			        </div>
 
 			        <div class="col">	  
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/ocean-waves.jpeg" alt="Eu Posso Ouvir o Oceano"></a>  
+		        		<a href="html/eu-posso-ouvir-o-oceano.html"><img class="thumbnail" src="imagens/ocean-waves.jpeg" alt="Eu Posso Ouvir o Oceano"></a>  
 		        		<label class="texto-img">Eu Posso Ouvir o Oceano</label>     	
 			        </div>
 
 			        <div class="col">	 
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/o-reino-dos-gatos.png" alt="O Reino dos Gatos"></a>  
+		        		<a href="html/o-reino-dos-gatos.html"><img class="thumbnail" src="imagens/o-reino-dos-gatos.png" alt="O Reino dos Gatos"></a>  
 		        		<label class="texto-img">O Reino dos Gatos</label>          	
 			        </div>
 
 			        <div class="col">
-		        		<a href="pg1.html"><img class="thumbnail" src="imagens/contos-de-terramar.png" alt="Contos de Terramar"></a>  
+		        		<a href="html/contos-de-terramar.html"><img class="thumbnail" src="imagens/contos-de-terramar.png" alt="Contos de Terramar"></a>  
 		        		<label class="texto-img">Contos de Terramar</label>           	
 			        </div>
 
@@ -253,7 +253,6 @@
 	
 	<script src="js/javascript.js"></script>
 	<script src="js/lista.js"></script>
-
 </body>
 
 </html>
