--- a/html/a-viagem-de-chihiro.html
+++ b/html/a-viagem-de-chihiro.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     
-	<div class="div-box" aria-label="Imagem do filme A Viagem de Chiriro">
+	<div class="div-box">
 		<header>
 			<!-- Navegador -->
 			<nav class="navbar" aria-label="barra de navegação">
@@ -63,7 +63,7 @@
 					<div class="container-out">
 					    <div class="search-container">
 					        <form id="search-engine">
-						        <input id="search" type="text" onblur="desfocus()"/>
+						        <input id="search" type="text" onblur="desfocus()" autocomplete="off">
 						        <input id="search_submit" type="submit">
 						        <div id="search-results"></div>
 					        </form>				     
@@ -73,7 +73,7 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>A Viagem de Chiriro</h1>
+				<h1>A Viagem de Chihiro</h1>
 				<h2 lang="ja">千と千尋の神隠し</h2>
 			</div>
 			
@@ -94,63 +94,63 @@
 				<table class="ghibli-table">
 					<tbody>
 						<tr>
-							<td>Duração</td>
+							<th>Duração</th>
 							<td>125 min</td>
 						</tr>	
 						<tr>
-							<td>Direção</td>
+							<th>Direção</th>
 							<td>Hayao Miyazaki</td>
 						</tr>	
 						<tr>
-							<td>Produção</td>
+							<th>Produção</th>
 							<td>Toshio Suzuki</td>
 						</tr>
 						<tr>
-							<td>Roteiro</td>
+							<th>Roteiro</th>
 							<td>Hayao Miyazaki</td>
 						</tr>
 						<tr>
-							<td>Elenco</td>
+							<th>Elenco</th>
 							<td>Rumi Hiiragi<br>Miyu Irino<br>Mari Natsuki<br>Takeshi Naito<br>Yasuko Sawaguchi<br>Tsunehiko Kamijo<br>Takehiko Ono<br>Bunta Sugawara</td>
 						</tr>
 						<tr>
-							<td>Gênero</td>
+							<th>Gênero</th>
 							<td>Fantasia</td>
 						</tr>
 						<tr>
-							<td>Música</td>
+							<th>Música</th>
 							<td>Joe Hisaishi</td>
 						</tr>
 						<tr>
-							<td>Cinematografia</td>
+							<th>Cinematografia</th>
 							<td>Atsushi Okui</td>
 						</tr>
 						<tr>
-							<td>Direção de arte</td>
+							<th>Direção de arte</th>
 							<td>Norobu Yoshida<br>Yoji Takeshige</td>
 						</tr>
 						<tr>
-							<td>Edição</td>
+							<th>Edição</th>
 							<td>Takeshi Seyama</td>
 						</tr>
 						<tr>
-							<td>Companhia(s) produtora(s)</td>
+							<th>Companhia(s) produtora(s)</th>
 							<td>Studio Ghibli</td>
 						</tr>
 						<tr>
-							<td>Lançamento</td>
+							<th>Lançamento</th>
 							<td>18 de julho de 2003</td>
 						</tr>
 						<tr>
-							<td>Idioma</td>
+							<th>Idioma</th>
 							<td>Japonês</td>
 						</tr>
 						<tr>
-							<td>Orçamento</td>
+							<th>Orçamento</th>
 							<td>¥ 2 bilhões</td>
 						</tr>
 						<tr>
-							<td>Receita</td>
+							<th>Receita</th>
 							<td>US$ 347,7 milhões</td>
 						</tr>
 					</tbody>
