--- a/html/as-memorias-de-marnie.html
+++ b/html/as-memorias-de-marnie.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Vidas ao Vento</title>
+	<title>As Memórias de Marnie</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-3.jpg");
+			background-image: url("../covers/cover-6.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Vidas ao Vento</h1>
-				<h2 lang="ja">風立ちぬ</h2>
+				<h1>As Memórias de Marnie</h1>
+				<h2 lang="ja">思い出のマーニー</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-3.jpg" alt="Poster do Filme Vidas ao Vento">
+				<img id="poster" src="../posters/poster-6.jpg" alt="Poster do Filme As Memórias de Marnie">
 				<br>
 				<br>
-				<p>Vidas ao Vento é um filme animado japonês lançado em 2013. A animação é uma cinebiografia ficcional de Jiro Horikoshi (1903-1982), projetista da aeronave de combate Mitsubishi A5M e seu sucessor, o Mitsubishi A6M Zero, usado pelo Império do Japão durante a Segunda Guerra Mundial.</p>
+				<p>As Memórias de Marnie é um filme japonês de animação escrito e dirigido por Hiromasa Yonebayashi, produzido pelo Studio Ghibli em 2014.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,43 +96,39 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>126 min</td>
+							<td>103 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Hayao Miyazaki</td>
+							<td>Hiromasa Yonebayashi</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
-							<td>Toshio Suzuki</td>
+							<td>Yoshiaki Nishimura<br>Toshio Suzuki</td>
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki</td>
+							<td>Keiko Niwa<br>Masashi Ando<br>Hiromasa Yonebayashi</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Miori Takimoto<br>Hidetoshi Nishijima<br>Masahiko Nishimura<br>Morio Kazama<br>Keiko Takeshita<br>Mirai Shida<br>Jun Kunimura<br>Shinobu Otake<br>Mansai Nomura</td>
+							<td>Sara Takatsuki<br>Kasumi Arimura</td>
 						</tr>
 						<tr>
-							<th>Gênero</th>
-							<td>Drama</td>
+							<th>Baseado</th>
+							<td>When Marnie Was There<br>de Joan G. Robinson</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Joe Hisaishi</td>
+							<td>Takatsugu Muramatsu</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
-						</tr>
-						<tr>
-							<th>Direção de arte</th>
-							<td>Yoji Takeshige</td>
+							<td>Junji Yabuta<br>Atsushi/Jun Tamura<br>Hidenori Shibahara</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
-							<td>Takeshi Seyama</td>
+							<td>Rie Matsubara</td>
 						</tr>
 						<tr>
 							<th>Companhia(s) produtora(s)</th>
@@ -140,7 +136,7 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Brasil" src="../icons/bandeira-brasil.png"></th>
-							<td>28 de fevereiro de 2014</td>
+							<td>19 de novembro de 2015</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -148,11 +144,11 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>US$ 30 milhões</td>
+							<td>¥1,15 bilhões</td>
 						</tr>
 						<tr>
 							<th>Receita</th>
-							<td>US$ 136.454.220</td>
+							<td>¥3,63 bilhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -160,28 +156,26 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>A história tem como personagem principal Jiro Horikoshi, um jovem que pretende se tornar um especialista na criação e manuseio de aeronaves. Uma das referências mais notáveis ao longo da sua vida é o artista transalpino Giovanni Battista Caproni, um profissional muito famoso que alcançou grande prestígio devido à beleza das suas obras. Devido aos problemas de miopia desde criança — uma condição que o impediu de ser piloto —, Jiro decide se juntar a uma instituição poderosa de aeronáutica no final da década de 1930.</p>
-
-				<p>À medida que a trama se desenvolve, os seus chefes percebem seu talento inato e tomam a decisão de lhe dar total liberdade para construir qualquer categoria de aeronave. O filme narra os acontecimentos mais representativos e influentes de toda a sua existência, recriando o terremoto que ocorreu em Kanto, o tempo marcado pela crise e dificuldades mundiais, a propagação de diferentes doenças por toda a sociedade e o envolvimento do Império do Sol Nascente na Segunda Guerra Mundial.</p>
+				<p>Anna é uma menina tímida e doce de 12 anos que só consegue se expressar através dos seus desenhos. Por conta de seus ataques de asma, ela é enviada para passar um tempo com os tios que moram no campo, para poder respirar ar puro. Durante seus passeios pela cidade, ela conhece uma menina loira de cabelos longos chamada Marnie, com quem faz uma amizade instantaneamente. As duas tornam-se melhores amigas e passam a dividir segredos e passatempos. Mas Anna vai descobrindo aos poucos que Marnie não é bem quem ela aparenta ser e ela começa a investigar o mistério que cerca a nova amiga.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3 id="Critica">Produção & Crítica</h3>
-				<p>	Hayao Miyazaki começou a conceber uma história para ilustrar a vida de Jiro Horikoshi em 2008. Ele publicou a história como uma série de mangá na revista mensal Model Graphix de abril de 2009 a janeiro de 2010, com o título emprestado do romance de Tatsuo Hori, Kaze Tachinu. A história do mangá segue o relato histórico do desenvolvimento de aeronaves de Horikoshi até 1935 (o ano do voo inaugural da Mitsubishi A5M) e se entrelaça com encontros fictícios com Caproni e Naoko Satomi. As cenas com Naoko no mangá foram adotadas a partir do romance Kaze Tachinu, no qual Tatsuo Hori escreveu sobre sua experiência de vida com sua noiva, Ayako Yano, antes de morrer de tuberculose. O nome Naoko Satomi foi emprestado da protagonista feminina de outro romance de Tatsuo Hori, Naoko. Os personagens discutem frequentemente o romance de Thomas Mann, A Montanha Mágica e, em uma carta a Naoko, Jiro nomeia seu amigo alemão em fuga “Mr. Castorp” em homenagem a seu protagonista. O personagem em si é uma caricatura do ex-funcionário do Studio Ghibli, Steven Alpert, que voltou ao Japão para dar voz ao personagem.</p>
+				<p>As Memórias de Marnie recebeu uma indicação ao Oscar de 2016 na categoria de Melhor Animação. Esta é a segunda animação do Studio Ghibli a ser dirigida por Hiromasa Yonebayashi. A primeira foi O Mundo dos Pequeninos.</p>
 
-				<p>Kaze Tachinu obteve uma recepção crítica muito favorável por parte da mídia japonesa e internacional. No agregador de resenhas Rotten Tomatoes, o filme marca uma pontuação de 88% com base em comentários de 179 críticos, e registra uma nota 7,9 de 10. No Metacritic, que atribui uma média aritmética ponderada com base em 100 comentários de críticos mainstream, o filme recebe uma pontuação média de 83 pontos com base em 41 resenhas, indicando "aclamação universal".</p>
+				<p>As Memórias de Marnie recebeu críticas positivas dos especialistas, que elogiaram sua animação, música, performances vocais e história. Chegou aos cinemas do Japão em 19 de julho de 2014, e em Blu-ray e DVD em 18 de março de 2015. O filme recebeu uma indicação ao Oscar de Melhor Animação.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/59U5FQ4kDEt11Q2UcFu1dK?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/5xCqg7ej0eaCdjJoDrWUrO?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70293674"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/80036398"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/the-wind-rises/umc.cmc.184qbh86enrlfq7wbce3bf061?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/el-recuerdo-de-marnie/umc.cmc.78u02xqphrnq7adthacn4z9t?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
 			</div>
 		</div>
@@ -190,7 +184,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
