--- a/html/contos-de-terramar.html
+++ b/html/contos-de-terramar.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Vidas ao Vento</title>
+	<title>Contos de Terramar</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-3.jpg");
+			background-image: url("../covers/cover-11.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Vidas ao Vento</h1>
-				<h2 lang="ja">風立ちぬ</h2>
+				<h1>Contos de Terramar</h1>
+				<h2 lang="ja">ゲド戦記</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-3.jpg" alt="Poster do Filme Vidas ao Vento">
+				<img id="poster" src="../posters/poster-11.jpg" alt="Poster do Filme Contos de Terramar">
 				<br>
 				<br>
-				<p>Vidas ao Vento é um filme animado japonês lançado em 2013. A animação é uma cinebiografia ficcional de Jiro Horikoshi (1903-1982), projetista da aeronave de combate Mitsubishi A5M e seu sucessor, o Mitsubishi A6M Zero, usado pelo Império do Japão durante a Segunda Guerra Mundial.</p>
+				<p>O Contos de Terramar é um filme japonês de animação dirigido por Goro Miyazaki e produzido pelo Studio Ghibli em 2006. O filme foi baseado nos quatro primeiros livros da franquia Terramar, escritos pela autora Ursula K. Le Guin, que são: O Feiticeiro de Terramar, As Tumbas de Atuan, A Praia Mais Longínqua e Tehanu: o Nome da Estrela. O título do filme surgiu da coleção de histórias curtas, Tales from Earthsea, publicada em 2001.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,39 +96,39 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>126 min</td>
+							<td>115 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Hayao Miyazaki</td>
+							<td>Goro Miyazaki</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
-							<td>Toshio Suzuki</td>
+							<td>Toshio Suzuki<br>Tomohiko Ishii</td>
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki</td>
+							<td>Goro Miyazaki<br>Keiko Niwa</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Miori Takimoto<br>Hidetoshi Nishijima<br>Masahiko Nishimura<br>Morio Kazama<br>Keiko Takeshita<br>Mirai Shida<br>Jun Kunimura<br>Shinobu Otake<br>Mansai Nomura</td>
+							<td>Bunta Sugawara<br>Junichi Okada<br>Aoi Teshima<br>Yuko Tanaka</td>
+						</tr>
+						<tr>
+							<th>Baseado</th>
+							<td lang="ja">Série Terramar, de<br>Ursula K. Le Guin</td>
 						</tr>
 						<tr>
 							<th>Gênero</th>
-							<td>Drama</td>
+							<td>Fantasia</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Joe Hisaishi</td>
+							<td>Tamiya Terashima</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
-						</tr>
-						<tr>
-							<th>Direção de arte</th>
-							<td>Yoji Takeshige</td>
+							<td>Hidenori Shibahara<br>Atsushi Tamura<br>Junji Yabuta</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -139,20 +139,16 @@
 							<td>Studio Ghibli</td>
 						</tr>
 						<tr>
-							<th>Lançamento <img id="bandeira" alt="Bandeira do Brasil" src="../icons/bandeira-brasil.png"></th>
-							<td>28 de fevereiro de 2014</td>
+							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
+							<td>29 de julho de 2006</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
 							<td>Japonês</td>
 						</tr>
 						<tr>
-							<th>Orçamento</th>
-							<td>US$ 30 milhões</td>
-						</tr>
-						<tr>
 							<th>Receita</th>
-							<td>US$ 136.454.220</td>
+							<td>US$68,7 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -160,28 +156,24 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>A história tem como personagem principal Jiro Horikoshi, um jovem que pretende se tornar um especialista na criação e manuseio de aeronaves. Uma das referências mais notáveis ao longo da sua vida é o artista transalpino Giovanni Battista Caproni, um profissional muito famoso que alcançou grande prestígio devido à beleza das suas obras. Devido aos problemas de miopia desde criança — uma condição que o impediu de ser piloto —, Jiro decide se juntar a uma instituição poderosa de aeronáutica no final da década de 1930.</p>
-
-				<p>À medida que a trama se desenvolve, os seus chefes percebem seu talento inato e tomam a decisão de lhe dar total liberdade para construir qualquer categoria de aeronave. O filme narra os acontecimentos mais representativos e influentes de toda a sua existência, recriando o terremoto que ocorreu em Kanto, o tempo marcado pela crise e dificuldades mundiais, a propagação de diferentes doenças por toda a sociedade e o envolvimento do Império do Sol Nascente na Segunda Guerra Mundial.</p>
+				<p>Algo estranho caminha sobre a terra. O reino está se deteriorando. Pessoas estão começando a agir diferente e a ver dragões, que não deveriam entrar no mundo dos humanos. Diante desses estranhos eventos, Ged, um poderoso arquimago, está investigando a causa. Durante sua jornada, ele conhece o Príncipe Arren, um adolescente perturbado. Enquanto Arren parece apenas um garoto tímido, ele tem um grave lado negro, que lhe concede força, um ódio implacável e que não tem misericórdia, principalmente quando se trata de proteger Theru, uma garota órfã. Para os oportunistas essa é uma ocasião perfeita, e o bruxo Cob decide usar Theru como isca contra Arren, e somente Ged poderá ajudá-lo a superar seus medos e salvar Theru.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção & Crítica</h3>
-				<p>	Hayao Miyazaki começou a conceber uma história para ilustrar a vida de Jiro Horikoshi em 2008. Ele publicou a história como uma série de mangá na revista mensal Model Graphix de abril de 2009 a janeiro de 2010, com o título emprestado do romance de Tatsuo Hori, Kaze Tachinu. A história do mangá segue o relato histórico do desenvolvimento de aeronaves de Horikoshi até 1935 (o ano do voo inaugural da Mitsubishi A5M) e se entrelaça com encontros fictícios com Caproni e Naoko Satomi. As cenas com Naoko no mangá foram adotadas a partir do romance Kaze Tachinu, no qual Tatsuo Hori escreveu sobre sua experiência de vida com sua noiva, Ayako Yano, antes de morrer de tuberculose. O nome Naoko Satomi foi emprestado da protagonista feminina de outro romance de Tatsuo Hori, Naoko. Os personagens discutem frequentemente o romance de Thomas Mann, A Montanha Mágica e, em uma carta a Naoko, Jiro nomeia seu amigo alemão em fuga “Mr. Castorp” em homenagem a seu protagonista. O personagem em si é uma caricatura do ex-funcionário do Studio Ghibli, Steven Alpert, que voltou ao Japão para dar voz ao personagem.</p>
+				<h3 id="Critica">Produção</h3>
+				<p>Este filme do Studio Ghibli foi a primeira adaptação em anime da franquia Terramar. No passado, muitos diretores, incluindo Hayao Miyazaki, tinham tentado adaptar o Ciclo de Terramar para o cinema, mas foram reprovados pela própria autora. Quando Le Guin ouviu pela primeira vez sobre o interesse de Miyazaki em adaptar seu trabalho, ela não tinha visto nenhum de seus filmes e associava animação com as produções da Disney, e acabou recusando seu pedido.</p>
 
-				<p>Kaze Tachinu obteve uma recepção crítica muito favorável por parte da mídia japonesa e internacional. No agregador de resenhas Rotten Tomatoes, o filme marca uma pontuação de 88% com base em comentários de 179 críticos, e registra uma nota 7,9 de 10. No Metacritic, que atribui uma média aritmética ponderada com base em 100 comentários de críticos mainstream, o filme recebe uma pontuação média de 83 pontos com base em 41 resenhas, indicando "aclamação universal".</p>
+				<p>Em 2003, depois de ganhar um Oscar pelo filme A Viagem de Chihiro, Hayao Miyazaki recebeu a aprovação de Le Guin, mas estava ocupado dirigindo O Castelo Animado. Toshio Suzuki decidiu que o filho de Hayao, Goro Miyazaki, que estava aconselhando sobre o filme, devia ser o diretor, mesmo nunca tendo ocupado esse cargo anteriormente. Hayao estava insatisfeito com a decisão, achando que Goro não tinha a experiência necessária. Eles supostamente não falavam um com o outro durante a produção do filme, no entanto Hayao reconheceu o trabalho de seu filho após a sua primeira prévia.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/59U5FQ4kDEt11Q2UcFu1dK?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/66P1f9J3PbfNKk0YXHYMyf?utm_source=generator" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70293674"><img class="icon" alt="Netflix" src="../icons/netflix.png">
-				</a>
-				<a href="https://tv.apple.com/br/movie/the-wind-rises/umc.cmc.184qbh86enrlfq7wbce3bf061?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://www.netflix.com/br/title/70142821"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
 			</div>
 		</div>
@@ -190,7 +182,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
