--- a/html/meu-amigo-totoro.html
+++ b/html/meu-amigo-totoro.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Vidas ao Vento</title>
+	<title>Meu Amigo Totoro</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-3.jpg");
+			background-image: url("../covers/cover-2.jpg");
 		}
 	</style>
 
@@ -73,21 +73,19 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Vidas ao Vento</h1>
-				<h2 lang="ja">風立ちぬ</h2>
+				<h1>Meu Amigo Totoro</h1>
+				<h2 lang="ja">となりのトトロ</h2>
 			</div>
-			
 		</header>
 	</div>
-
 
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-3.jpg" alt="Poster do Filme Vidas ao Vento">
+				<img id="poster" src="../posters/poster-2.jpg" alt="Poster do Filme Meu Amigo Totoro">
 				<br>
 				<br>
-				<p>Vidas ao Vento é um filme animado japonês lançado em 2013. A animação é uma cinebiografia ficcional de Jiro Horikoshi (1903-1982), projetista da aeronave de combate Mitsubishi A5M e seu sucessor, o Mitsubishi A6M Zero, usado pelo Império do Japão durante a Segunda Guerra Mundial.</p>
+				<p>Meu Amigo Totoro é um filme animado de fantasia escrito e dirigido por Hayao Miyazaki e produzido pelo Studio Ghibli em 1988. O filme conta a historia das duas jovens filhas (Satsuki e Mei) de um professor e suas aventuras com espíritos da floresta amigáveis no Japão pós-guerra rural.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,7 +94,7 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>126 min</td>
+							<td>86 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
@@ -104,7 +102,7 @@
 						</tr>	
 						<tr>
 							<th>Produção</th>
-							<td>Toshio Suzuki</td>
+							<td>Toru Hara</td>
 						</tr>
 						<tr>
 							<th>Roteiro</th>
@@ -112,11 +110,11 @@
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Miori Takimoto<br>Hidetoshi Nishijima<br>Masahiko Nishimura<br>Morio Kazama<br>Keiko Takeshita<br>Mirai Shida<br>Jun Kunimura<br>Shinobu Otake<br>Mansai Nomura</td>
+							<td>Chika Sakamoto<br>Noriko Hidaka<br>Hitoshi Takagi</td>
 						</tr>
 						<tr>
 							<th>Gênero</th>
-							<td>Drama</td>
+							<td>Fantasia</td>
 						</tr>
 						<tr>
 							<th>Música</th>
@@ -124,11 +122,7 @@
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
-						</tr>
-						<tr>
-							<th>Direção de arte</th>
-							<td>Yoji Takeshige</td>
+							<td>Hisao Shirai</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -139,20 +133,16 @@
 							<td>Studio Ghibli</td>
 						</tr>
 						<tr>
-							<th>Lançamento <img id="bandeira" alt="Bandeira do Brasil" src="../icons/bandeira-brasil.png"></th>
-							<td>28 de fevereiro de 2014</td>
+							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
+							<td>16 de abril de 1988</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
 							<td>Japonês</td>
 						</tr>
 						<tr>
-							<th>Orçamento</th>
-							<td>US$ 30 milhões</td>
-						</tr>
-						<tr>
 							<th>Receita</th>
-							<td>US$ 136.454.220</td>
+							<td>US$45,1 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -160,28 +150,24 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>A história tem como personagem principal Jiro Horikoshi, um jovem que pretende se tornar um especialista na criação e manuseio de aeronaves. Uma das referências mais notáveis ao longo da sua vida é o artista transalpino Giovanni Battista Caproni, um profissional muito famoso que alcançou grande prestígio devido à beleza das suas obras. Devido aos problemas de miopia desde criança — uma condição que o impediu de ser piloto —, Jiro decide se juntar a uma instituição poderosa de aeronáutica no final da década de 1930.</p>
-
-				<p>À medida que a trama se desenvolve, os seus chefes percebem seu talento inato e tomam a decisão de lhe dar total liberdade para construir qualquer categoria de aeronave. O filme narra os acontecimentos mais representativos e influentes de toda a sua existência, recriando o terremoto que ocorreu em Kanto, o tempo marcado pela crise e dificuldades mundiais, a propagação de diferentes doenças por toda a sociedade e o envolvimento do Império do Sol Nascente na Segunda Guerra Mundial.</p>
+				<p>Duas meninas se mudam com o pai para o interior do Japão, com o objetivo de ficar perto da mãe, que está internada em um hospital. Lá, elas viverão muitas aventuras ao lado de um simpático espírito protetor da floresta chamado Totoro, que vive em uma canforeira gigante.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção & Crítica</h3>
-				<p>	Hayao Miyazaki começou a conceber uma história para ilustrar a vida de Jiro Horikoshi em 2008. Ele publicou a história como uma série de mangá na revista mensal Model Graphix de abril de 2009 a janeiro de 2010, com o título emprestado do romance de Tatsuo Hori, Kaze Tachinu. A história do mangá segue o relato histórico do desenvolvimento de aeronaves de Horikoshi até 1935 (o ano do voo inaugural da Mitsubishi A5M) e se entrelaça com encontros fictícios com Caproni e Naoko Satomi. As cenas com Naoko no mangá foram adotadas a partir do romance Kaze Tachinu, no qual Tatsuo Hori escreveu sobre sua experiência de vida com sua noiva, Ayako Yano, antes de morrer de tuberculose. O nome Naoko Satomi foi emprestado da protagonista feminina de outro romance de Tatsuo Hori, Naoko. Os personagens discutem frequentemente o romance de Thomas Mann, A Montanha Mágica e, em uma carta a Naoko, Jiro nomeia seu amigo alemão em fuga “Mr. Castorp” em homenagem a seu protagonista. O personagem em si é uma caricatura do ex-funcionário do Studio Ghibli, Steven Alpert, que voltou ao Japão para dar voz ao personagem.</p>
-
-				<p>Kaze Tachinu obteve uma recepção crítica muito favorável por parte da mídia japonesa e internacional. No agregador de resenhas Rotten Tomatoes, o filme marca uma pontuação de 88% com base em comentários de 179 críticos, e registra uma nota 7,9 de 10. No Metacritic, que atribui uma média aritmética ponderada com base em 100 comentários de críticos mainstream, o filme recebe uma pontuação média de 83 pontos com base em 41 resenhas, indicando "aclamação universal".</p>
+				<h3 id="Critica">Produção</h3>
+				<p>Depois de escrever e produzir O Castelo no Céu (1986), Hayao Miyazaki começou a dirigir Meu Amigo Totoro para o Studio Ghibli. A produção de Miyazaki acompanhou a produção de Túmulo dos Vagalumes, de seu colega Isao Takahata. O filme de Miyazaki foi financiado pelo produtor executivo Yasuyoshi Tokuma. Ambos foram lançados simultâneamente em 1988. O lançamento em conjunto foi considerado “uma das duplas em cartaz mais emocionantes e notáveis já oferecidas ao público do cinema. ”</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/59U5FQ4kDEt11Q2UcFu1dK?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/playlist/3St6kkDwklVEqJIbhyLggf?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70293674"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/60032294"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/the-wind-rises/umc.cmc.184qbh86enrlfq7wbce3bf061?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/moj-sasiad-totoro/umc.cmc.4j11jg8g8n6tei5d7cupfy40k?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
 			</div>
 		</div>
@@ -190,7 +176,8 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
+			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
