--- a/html/o-mundo-dos-pequeninos.html
+++ b/html/o-mundo-dos-pequeninos.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Vidas ao Vento</title>
+	<title>O Mundo dos Pequeninos</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-3.jpg");
+			background-image: url("../covers/cover-8.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Vidas ao Vento</h1>
-				<h2 lang="ja">風立ちぬ</h2>
+				<h1>O Mundo dos Pequeninos</h1>
+				<h2 lang="ja">借りぐらしのアリエッティ</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-3.jpg" alt="Poster do Filme Vidas ao Vento">
+				<img id="poster" src="../posters/poster-8.jpg" alt="Poster do Filme O Mundo dos Pequeninos">
 				<br>
 				<br>
-				<p>Vidas ao Vento é um filme animado japonês lançado em 2013. A animação é uma cinebiografia ficcional de Jiro Horikoshi (1903-1982), projetista da aeronave de combate Mitsubishi A5M e seu sucessor, o Mitsubishi A6M Zero, usado pelo Império do Japão durante a Segunda Guerra Mundial.</p>
+				<p>O Mundo dos Pequeninos é um filme de animação japonês de 2010, sendo a estreia de Hiromasa Yonebayashi na direção. Foi baseado no romance Os Pequeninos Borrowers, de Mary Norton, com roteiro de Hayao Miyazaki e Keiko Niwa e produção do Studio Ghibli.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>126 min</td>
+							<td>95 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Hayao Miyazaki</td>
+							<td>Hiromasa Yonebayashi</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,39 +108,39 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki</td>
+							<td>Hayao Miyazaki<br>Keiko Niwa</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Miori Takimoto<br>Hidetoshi Nishijima<br>Masahiko Nishimura<br>Morio Kazama<br>Keiko Takeshita<br>Mirai Shida<br>Jun Kunimura<br>Shinobu Otake<br>Mansai Nomura</td>
+							<td>Mirai Shida<br>Ryunosuke Kamiki<br>Shinobu Otake<br>Keiko Takeshita<br>Tatsuya Fujiwara<br>Tomokazu Miura<br>Kirin Kiki</td>
+						</tr>
+						<tr>
+							<th>Baseado</th>
+							<td>Os Pequeninos Borrowers<br>de Mary Norton</td>
 						</tr>
 						<tr>
 							<th>Gênero</th>
-							<td>Drama</td>
+							<td>Fantasia</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Joe Hisaishi</td>
+							<td>Cécile Corbel</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
 							<td>Atsushi Okui</td>
 						</tr>
 						<tr>
-							<th>Direção de arte</th>
-							<td>Yoji Takeshige</td>
-						</tr>
-						<tr>
 							<th>Edição</th>
-							<td>Takeshi Seyama</td>
+							<td>Rie Matsubara</td>
 						</tr>
 						<tr>
 							<th>Companhia(s) produtora(s)</th>
 							<td>Studio Ghibli</td>
 						</tr>
 						<tr>
-							<th>Lançamento <img id="bandeira" alt="Bandeira do Brasil" src="../icons/bandeira-brasil.png"></th>
-							<td>28 de fevereiro de 2014</td>
+							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
+							<td>17 de julho de 2010</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -148,11 +148,11 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>US$ 30 milhões</td>
+							<td>US$23 milhões</td>
 						</tr>
 						<tr>
 							<th>Receita</th>
-							<td>US$ 136.454.220</td>
+							<td>US$146 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -160,28 +160,26 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>A história tem como personagem principal Jiro Horikoshi, um jovem que pretende se tornar um especialista na criação e manuseio de aeronaves. Uma das referências mais notáveis ao longo da sua vida é o artista transalpino Giovanni Battista Caproni, um profissional muito famoso que alcançou grande prestígio devido à beleza das suas obras. Devido aos problemas de miopia desde criança — uma condição que o impediu de ser piloto —, Jiro decide se juntar a uma instituição poderosa de aeronáutica no final da década de 1930.</p>
-
-				<p>À medida que a trama se desenvolve, os seus chefes percebem seu talento inato e tomam a decisão de lhe dar total liberdade para construir qualquer categoria de aeronave. O filme narra os acontecimentos mais representativos e influentes de toda a sua existência, recriando o terremoto que ocorreu em Kanto, o tempo marcado pela crise e dificuldades mundiais, a propagação de diferentes doenças por toda a sociedade e o envolvimento do Império do Sol Nascente na Segunda Guerra Mundial.</p>
+				<p>Nos subúrbios de Tóquio, sob o assoalho de uma casa velha, Arrietty vive em seu minúsculo mundo com a família, fazendo de tudo para manter em segredo a existência de todos. Sobrevivendo como pequenos ladrões, eles conhecem as regras para que nunca sejam percebidos pelos verdadeiros – e grandes – donos da casa. Para isso, procuram manter a desconfiança deles em cima dos gatos e ratos e tomam todos os cuidados possíveis para evitar de serem vistos. Contudo, quando um jovem rapaz se hospeda na casa, a pequenina Arrietty acredita que poderá manter uma amizade com ele, apesar da diferença de tamanhos.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3 id="Critica">Produção & Crítica</h3>
-				<p>	Hayao Miyazaki começou a conceber uma história para ilustrar a vida de Jiro Horikoshi em 2008. Ele publicou a história como uma série de mangá na revista mensal Model Graphix de abril de 2009 a janeiro de 2010, com o título emprestado do romance de Tatsuo Hori, Kaze Tachinu. A história do mangá segue o relato histórico do desenvolvimento de aeronaves de Horikoshi até 1935 (o ano do voo inaugural da Mitsubishi A5M) e se entrelaça com encontros fictícios com Caproni e Naoko Satomi. As cenas com Naoko no mangá foram adotadas a partir do romance Kaze Tachinu, no qual Tatsuo Hori escreveu sobre sua experiência de vida com sua noiva, Ayako Yano, antes de morrer de tuberculose. O nome Naoko Satomi foi emprestado da protagonista feminina de outro romance de Tatsuo Hori, Naoko. Os personagens discutem frequentemente o romance de Thomas Mann, A Montanha Mágica e, em uma carta a Naoko, Jiro nomeia seu amigo alemão em fuga “Mr. Castorp” em homenagem a seu protagonista. O personagem em si é uma caricatura do ex-funcionário do Studio Ghibli, Steven Alpert, que voltou ao Japão para dar voz ao personagem.</p>
+				<p>Em 16 de dezembro de 2009, o Studio Ghibli anunciou O Mundo dos Pequeninos como seu filme para o próximo ano. Este filme é baseado no romance Os Pequeninos Borrowers, da escritora britânica Mary Norton. O romance ganhou a Medalha Carnegie pela literatura infantil em 1953 e já havia sido adaptado em dois filmes e uma série de TV na época. Os fundadores do Studio Ghibli, Isao Takahata e Hayao Miyazaki, estavam contemplando uma adaptação deste romance há cerca de 40 anos.</p>
 
-				<p>Kaze Tachinu obteve uma recepção crítica muito favorável por parte da mídia japonesa e internacional. No agregador de resenhas Rotten Tomatoes, o filme marca uma pontuação de 88% com base em comentários de 179 críticos, e registra uma nota 7,9 de 10. No Metacritic, que atribui uma média aritmética ponderada com base em 100 comentários de críticos mainstream, o filme recebe uma pontuação média de 83 pontos com base em 41 resenhas, indicando "aclamação universal".</p>
+				<p>No mesmo dia, foi anunciado Hiromasa Yonebayashi como diretor do filme e Hayao Miyazaki como planejador. Yonebayashi trabalhou em algumas das obras do Studio Ghibli, como O Castelo Animado, Ponyo e A Viagem de Chihiro. Ele também foi o diretor reserva de Contos de Terramar.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/59U5FQ4kDEt11Q2UcFu1dK?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/0ldESLoQyyP80ynVU2gych?utm_source=generator" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70293674"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/70216227"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/the-wind-rises/umc.cmc.184qbh86enrlfq7wbce3bf061?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/arriettys-hemmelige-verden/umc.cmc.4krkqhs0xk33vof1g7w1v3i5n?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
 			</div>
 		</div>
@@ -190,7 +188,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
