--- a/html/o-reino-dos-gatos.html
+++ b/html/o-reino-dos-gatos.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Vidas ao Vento</title>
+	<title>O Reino dos Gatos</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-3.jpg");
+			background-image: url("../covers/cover-10.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Vidas ao Vento</h1>
-				<h2 lang="ja">風立ちぬ</h2>
+				<h1>O Reino dos Gatos</h1>
+				<h2 lang="ja">猫の恩返し</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-3.jpg" alt="Poster do Filme Vidas ao Vento">
+				<img id="poster" src="../posters/poster-10.jpg" alt="Poster do Filme O Reinos dos Gatos">
 				<br>
 				<br>
-				<p>Vidas ao Vento é um filme animado japonês lançado em 2013. A animação é uma cinebiografia ficcional de Jiro Horikoshi (1903-1982), projetista da aeronave de combate Mitsubishi A5M e seu sucessor, o Mitsubishi A6M Zero, usado pelo Império do Japão durante a Segunda Guerra Mundial.</p>
+				<p>O Reino dos Gatos é um filme japonês dirigido por Hiroyuki Morita, lançado em 2002 e produzido pelo Studio Ghibli. Baseado em Baron, Neko no Danshaku (literalmente “Barão, o gato barão”) de Aoi Hiiragi, O Reino dos Gatos segue Muta (o gato gordo em Sussurros do Coração) e Barão (do mesmo filme) quando eles tentam resgatar uma jovem garota chamada Haru que entrou no mundo dos gatos.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,43 +96,43 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>126 min</td>
+							<td>75 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Hayao Miyazaki</td>
+							<td>Hiroyuki Morita</td>
 						</tr>	
 						<tr>
-							<th>Produção</th>
-							<td>Toshio Suzuki</td>
+							<th>Storyboard</th>
+							<td>Hiroyuki Morita</td>
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki</td>
+							<td>Reiko Yoshida</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Miori Takimoto<br>Hidetoshi Nishijima<br>Masahiko Nishimura<br>Morio Kazama<br>Keiko Takeshita<br>Mirai Shida<br>Jun Kunimura<br>Shinobu Otake<br>Mansai Nomura</td>
+							<td>Chizuru Ikewaki<br>Yoshihiko Hakamada<br>Aki Maeda<br>Takayuki Yamada<br>Hitomi Sato<br>Kenta Satoi<br>Mari Hamada<br>Tetsu Watanabe</td>
+						</tr>
+						<tr>
+							<th>Baseado</th>
+							<td lang="ja">Neko no Danshaku, Baron<br>de Aoi Hiiragi</td>
 						</tr>
 						<tr>
 							<th>Gênero</th>
-							<td>Drama</td>
+							<td>Animação, Aventura e Fantasia</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Joe Hisaishi</td>
+							<td>Yuji Nomi</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
-						</tr>
-						<tr>
-							<th>Direção de arte</th>
-							<td>Yoji Takeshige</td>
+							<td>Kentaro Takahashi</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
-							<td>Takeshi Seyama</td>
+							<td>Megumi Uchida</td>
 						</tr>
 						<tr>
 							<th>Companhia(s) produtora(s)</th>
@@ -140,7 +140,7 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Brasil" src="../icons/bandeira-brasil.png"></th>
-							<td>28 de fevereiro de 2014</td>
+							<td>13 de fevereiro de 2004</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -148,11 +148,11 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>US$ 30 milhões</td>
+							<td>$20 milhões</td>
 						</tr>
 						<tr>
 							<th>Receita</th>
-							<td>US$ 136.454.220</td>
+							<td>$54 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -160,28 +160,24 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>A história tem como personagem principal Jiro Horikoshi, um jovem que pretende se tornar um especialista na criação e manuseio de aeronaves. Uma das referências mais notáveis ao longo da sua vida é o artista transalpino Giovanni Battista Caproni, um profissional muito famoso que alcançou grande prestígio devido à beleza das suas obras. Devido aos problemas de miopia desde criança — uma condição que o impediu de ser piloto —, Jiro decide se juntar a uma instituição poderosa de aeronáutica no final da década de 1930.</p>
-
-				<p>À medida que a trama se desenvolve, os seus chefes percebem seu talento inato e tomam a decisão de lhe dar total liberdade para construir qualquer categoria de aeronave. O filme narra os acontecimentos mais representativos e influentes de toda a sua existência, recriando o terremoto que ocorreu em Kanto, o tempo marcado pela crise e dificuldades mundiais, a propagação de diferentes doenças por toda a sociedade e o envolvimento do Império do Sol Nascente na Segunda Guerra Mundial.</p>
+				<p>Essa é a história de Haru, uma garota muito preguiçosa que todos os dias chega atrasada na escola. Um belo dia, voltando para casa, salva um misterioso gato de ser atropelado. Na mesma noite, a menina recebe a visita do Rei dos Gatos que a convida para conhecer o seu reino, um lugar mágico, diferente de tudo, onde os bichos falam e se comportam como gente. Haru não sabe, mas ela será obrigada a se casar com o Príncipe Lune. E mais: ela vai se transformar em uma gatinha muito simpática.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção & Crítica</h3>
-				<p>	Hayao Miyazaki começou a conceber uma história para ilustrar a vida de Jiro Horikoshi em 2008. Ele publicou a história como uma série de mangá na revista mensal Model Graphix de abril de 2009 a janeiro de 2010, com o título emprestado do romance de Tatsuo Hori, Kaze Tachinu. A história do mangá segue o relato histórico do desenvolvimento de aeronaves de Horikoshi até 1935 (o ano do voo inaugural da Mitsubishi A5M) e se entrelaça com encontros fictícios com Caproni e Naoko Satomi. As cenas com Naoko no mangá foram adotadas a partir do romance Kaze Tachinu, no qual Tatsuo Hori escreveu sobre sua experiência de vida com sua noiva, Ayako Yano, antes de morrer de tuberculose. O nome Naoko Satomi foi emprestado da protagonista feminina de outro romance de Tatsuo Hori, Naoko. Os personagens discutem frequentemente o romance de Thomas Mann, A Montanha Mágica e, em uma carta a Naoko, Jiro nomeia seu amigo alemão em fuga “Mr. Castorp” em homenagem a seu protagonista. O personagem em si é uma caricatura do ex-funcionário do Studio Ghibli, Steven Alpert, que voltou ao Japão para dar voz ao personagem.</p>
+				<h3 id="Critica">Produção</h3>
+				<p>Em 1995, o Studio Ghibli lançou o filme Sussurros do Coração, baseado no mangá Mimi wo Sumaseba de Aoi Hiiragi, cujo tema trata de uma garota escrevendo um romance de fantasia. Embora a vida da garota não tivesse elementos mágicos, o filme mostrava cenas curtas de fantasia que descreviam cenas escritas pela protagonista sobre o Barão, personagem de seu romance. Ele era tão popular que uma sequência indireta foi feita. Desta vez a história trazia o Barão e uma outra garota, uma aluna do ensino médio chamada Haru, no qual Muta (personagem de Sussurros do Coração) também aparece.</p>
 
-				<p>Kaze Tachinu obteve uma recepção crítica muito favorável por parte da mídia japonesa e internacional. No agregador de resenhas Rotten Tomatoes, o filme marca uma pontuação de 88% com base em comentários de 179 críticos, e registra uma nota 7,9 de 10. No Metacritic, que atribui uma média aritmética ponderada com base em 100 comentários de críticos mainstream, o filme recebe uma pontuação média de 83 pontos com base em 41 resenhas, indicando "aclamação universal".</p>
+				<p>O Reino dos Gatos começou como “Projeto Gato” em 1999. O Studio Ghibli recebeu um pedido de um parque temático japonês para criar um curta de 20 minutos com gatos como protagonistas. Hayao Miyazaki queria que três elementos-chave aparecessem no curta – estes eram o Barão, Muta e uma misteriosa loja de antiguidades. Hiiragi foi contratado para criar o mangá equivalente ao curta, chamado Neko no Danshaku, Baron que foi publicado em inglês pela Viz Media com o título Baron, The Cat Returns.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/59U5FQ4kDEt11Q2UcFu1dK?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/1KDCap6BtIiJsmvilIA9oG?utm_source=generator" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70293674"><img class="icon" alt="Netflix" src="../icons/netflix.png">
-				</a>
-				<a href="https://tv.apple.com/br/movie/the-wind-rises/umc.cmc.184qbh86enrlfq7wbce3bf061?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://www.netflix.com/br/title/70019058"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
 			</div>
 		</div>
@@ -190,7 +186,8 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
+			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
